deprecated/selfhost-v1/kubernetes-v1/deprecated/ktunnel/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ktunnel
  labels:
    name: ktunnel
    app: ktunnel-server
